--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
           Fuerza de Seguridad para el ámbito de la Seguridad Interior</em
         >
       </p> <br>
-      <p>
+      <article>
         Siendo padre de una niña, comenzo mi interes por la informatica y las tecnologias en vistas de afrontar la evolucion e interconexion de muchas areas de la vida, desde el control parental, la administacion de tiempo y el uso de la tecnologia en la educacion, para poder acompañar el dia de mañana a mi hija y no dejarla fuera de saberes futuros naturalizados de las nuevas generaciones. <br>
         Tambien en mi propia area de trabajo, es indispensable la introduccion a la globalizacion y usos de internet, redes sociales y ofimatica, la actualizacion en el área de prevencion para seguridad de la comunidad debiera ser un requisito en la formacion academica relacionada.
-      </p>
+      </article>
     </div>
     <br />
     <br />
@@ -135,7 +135,7 @@
     </div>
     <br /><br />
 
-    <div class="sangriaGrande">
+    <div class="tarjeta" id="estudios">
       <h3>Estudios</h3>
       <br />
       <ul>
@@ -200,14 +200,9 @@
       <br />
     </div>
 
-    <div class="centrados">
-      <h4>Ir a</h4>
-      <a href="#banner">Inicio</a> <br />
-      <a href="https://www.google.com/" target="blank">Google</a>
-      <!-- Pueba navegador, el link de Google abre en nueva ventana-->
-    </div>
+    
   
-    <div>
+    <footer>
       <form action="">
         <h3>CONTACTO</h3>
         <P>Enviame un correo con tu comentario o propuesta</P>
@@ -217,7 +212,7 @@
         <textarea name="mensaje" placeholder="Escriba el mensaje"></textarea> <br>
         <input type="submit" id="enviar">
       </form>
-    </div>
+    </footer>
     <br>
     
     <script src="app/app.js"></script>
