Separando html por partes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         />
       </section>
 
-      <section class="sangria">
+      <article class="sangria">
         <h2>Guido H. Insfran Duarte</h2ss=>
         <h4>Full Stack Developer Jr (Estudiante)</h4>
   
@@ -106,17 +106,19 @@
     <br />
 
     <div class="sangriaGrande">
-      <h3><span>Acerca de</span></h3>
-      <br />
-      <p class="importante">
-        <em
-          >Licenciado en Seguridad Pública, actividad de Análisis Criminal en
-          Fuerza de Seguridad para el ámbito de la Seguridad Interior</em
-        >
-      </p> <br>
       <article>
-        Siendo padre de una niña, comenzo mi interes por la informatica y las tecnologias en vistas de afrontar la evolucion e interconexion de muchas areas de la vida, desde el control parental, la administacion de tiempo y el uso de la tecnologia en la educacion, para poder acompañar el dia de mañana a mi hija y no dejarla fuera de saberes futuros naturalizados de las nuevas generaciones. <br>
-        Tambien en mi propia area de trabajo, es indispensable la introduccion a la globalizacion y usos de internet, redes sociales y ofimatica, la actualizacion en el área de prevencion para seguridad de la comunidad debiera ser un requisito en la formacion academica relacionada.
+        <h3><span>Acerca de</span></h3>
+        <br />
+        <article class="importante">
+          <em>
+            <p>
+              Licenciado en Seguridad Pública, actividad de Análisis Criminal en
+              Fuerza de Seguridad para el ámbito de la Seguridad Interior
+            </p>
+          </em><br> <br>
+      
+            <p>Siendo padre de una niña, comenzó mi interés por la informática y las tecnologías en vistas de afrontar la evolución e interconexión de muchas áreas de la vida, desde el control parental, la administración de tiempo y el uso de la tecnología en la educación, para poder acompañar el día de mañana a mi hija y no dejarla fuera de saberes futuros naturalizados de las nuevas generaciones.</p> <br><br>
+            <p>También en mi propia área de trabajo, es indispensable la introducción a la globalización y usos de internet, redes sociales y ofimática, la actualización en el área de prevención para seguridad de la comunidad debiera ser un requisito en la formación académica relacionada.</p>
       </article>
     </div>
     <br />
@@ -125,60 +127,62 @@
     <div class="sangriaGrande">
       <h3>Experiencia</h3>
       <br />
-      <p>
+      <section>
         <img src="ico/GN.ico" alt="Icono GN" id="logoGN"/> <br />
         <b>Gendarmeria Nacional</b> <br />
         Analista Criminal <br />
         Investigador Judicial <br>
         10 años en actividad
-      </p>
+      </section>
     </div>
     <br /><br />
 
     <div class="tarjeta" id="estudios">
-      <h3>Estudios</h3>
-      <br />
-      <ul>
-        <h4>Estudios Secundarios</h4>
-        <li>
-          Técnico Medio en Equipos e Instalaciones Electromecánicas - E.P.E.T.
-          Nro. 12, 2009, Misiones
-        </li>
+      <article>
+        <h3>Estudios</h3>
         <br />
-
-        <h4>Estudios Tercarios</h4>
-        <li>
-          Técnico Universitario en Seguridad Pública -
-          <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
-          >, 2015, Buenos Aires
-        </li>
-        <br />
-
-        <h4>Estudios de Grado</h4>
-        <li>
-          Licenciado en Seguridad Pública -
-          <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
-          >, 2019, Buenos Aires
-        </li>
-        <br />
-
-        <h4>Capacitaciones</h4>
-        <li>
-          Primera etapa de
-          <a
-            href="https://www.argentina.gob.ar/produccion/argentina-programa/primera-etapa"
-            target="blank"
-          >
-            Argentina Programa:</a
-          >
-          #SéProgramar
-          <a
-            href="https://drive.google.com/file/d/1L8oN0qjh5G_UhtRmwqG1QtFzZCR3NVVs/view?usp=sharing"
-            target="blank"
-            >(Certificado)</a
-          >
-        </li>
-      </ul>
+        <ul>
+          <h4>Estudios Secundarios</h4>
+          <li>
+            Técnico Medio en Equipos e Instalaciones Electromecánicas - E.P.E.T.
+            Nro. 12, 2009, Misiones
+          </li>
+          <br />
+  
+          <h4>Estudios Tercarios</h4>
+          <li>
+            Técnico Universitario en Seguridad Pública -
+            <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
+            >, 2015, Buenos Aires
+          </li>
+          <br />
+  
+          <h4>Estudios de Grado</h4>
+          <li>
+            Licenciado en Seguridad Pública -
+            <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
+            >, 2019, Buenos Aires
+          </li>
+          <br />
+  
+          <h4>Capacitaciones</h4>
+          <li>
+            Primera etapa de
+            <a
+              href="https://www.argentina.gob.ar/produccion/argentina-programa/primera-etapa"
+              target="blank"
+            >
+              Argentina Programa:</a
+            >
+            #SéProgramar
+            <a
+              href="https://drive.google.com/file/d/1L8oN0qjh5G_UhtRmwqG1QtFzZCR3NVVs/view?usp=sharing"
+              target="blank"
+              >(Certificado)</a
+            >
+          </li>
+        </ul>
+      </article>
     </div>
     <br />
 
