BEN con experiencia y estudios

--- a/index.html
+++ b/index.html
@@ -72,15 +72,12 @@
           <!--Refereencia en viñeta-->
           <a href="mailto:guidohid59@gmail.com" target="blank"
             ><img class="ico" src="ico/email.ico" alt="Icono Email"
-            />
-            guidohid59@gmail.com</a
-          >
+            />guidohid59@gmail.com</a>
           <br />
           <a href="#Mapa">
             <img class="ico"
               src="ico/periscope.ico"
-              alt="Icono ubicacion"
-              
+              alt="Icono ubicacion"      
             />
             Ciudad Autonoma de Buenos Aires (Argentina)
           </a>
@@ -115,9 +112,9 @@
     <br />
 
     <div class="experiencia">
-      <h3  class="experiencia__h3">Experiencia</h3>
+      <h3  class="acerca-de-mi__h3">Experiencia</h3>
       <br />
-      <section class="experiencia__section">
+      <section class="acerca-de-mi__p2">
         <img src="ico/GN.ico" alt="Icono GN" id="logoGN"/> <br />
         <b>Gendarmeria Nacional</b> <br />
         Analista Criminal <br />
@@ -127,19 +124,19 @@
     </div>
     <br /><br />
 
-    <div class="tarjeta" id="estudios">
-      <article>
-        <h3>Estudios</h3>
+    <div class="estudios">
+      <article >
+        <h3 class="acerca-de-mi__h3">Estudios</h3>
         <br />
         <ul>
-          <h4>Estudios Secundarios</h4>
+          <h4 class="acerca-de-mi__h3--size">Estudios Secundarios</h4>
           <li>
             Técnico Medio en Equipos e Instalaciones Electromecánicas - E.P.E.T.
             Nro. 12, 2009, Misiones
           </li>
           <br />
   
-          <h4>Estudios Tercarios</h4>
+          <h4 class="acerca-de-mi__h3--size">Estudios Tercarios</h4>
           <li>
             Técnico Universitario en Seguridad Pública -
             <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
@@ -147,7 +144,7 @@
           </li>
           <br />
   
-          <h4>Estudios de Grado</h4>
+          <h4 class="acerca-de-mi__h3--size">Estudios de Grado</h4>
           <li>
             Licenciado en Seguridad Pública -
             <a href="https://iugna.edu.ar/main/index.php" target="blank">IUGNA</a
@@ -155,7 +152,7 @@
           </li>
           <br />
   
-          <h4>Capacitaciones</h4>
+          <h4 class="acerca-de-mi__h3--size">Capacitaciones</h4>
           <li>
             Primera etapa de
             <a
